refactor:更新关于的链接

--- a/html/bezier_anim.html
+++ b/html/bezier_anim.html
@@ -214,7 +214,7 @@
         <footer>
 			<div class="container">
 				<span>&copy;&nbsp;2019-2020&nbsp;</span>
-				<a id="aboutDzjH" href="javascript:void(0);" title="关于JDreamHeart">梦心DH</a>
+				<a href="https://www.jdreamheart.com" title="JDreamHeart">梦心DH</a>
 			</div>
         </footer>
         <script src="https://jdreamheart.com/resource/jquery/jquery-3.4.0.min.js"></script>
